fix: correct z-index

--- a/english-for-kids-base/src/app/components/navigation/navigation.component.scss
+++ b/english-for-kids-base/src/app/components/navigation/navigation.component.scss
@@ -1,4 +1,5 @@
 .navigation {
+
   &__toggle {
     position: fixed;
     cursor: pointer;
@@ -51,6 +52,7 @@
     list-style: none;
     transition-property: transform;
     transition-duration: 0.6s;
+    z-index: 2;
   }
 
   &__item {
